refactor : 재윤님 코드리뷰 반영 (api key 환경변수화 등등)