@@ -1,7 +1,6 @@
 package com.nameplz.baedal.domain.AiRequest.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nameplz.baedal.domain.AiRequest.domain.AiRequest;
 import com.nameplz.baedal.domain.AiRequest.dto.request.AiRequestDto;
@@ -13,9 +12,9 @@ import com.nameplz.baedal.domain.user.repository.UserRepository;
 import com.nameplz.baedal.global.common.exception.GlobalException;
 import com.nameplz.baedal.global.common.response.ResultCase;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -25,6 +24,7 @@ import org.springframework.web.client.RestTemplate;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class AiRequestService {
 
     private final UserRepository userRepository;
@@ -32,14 +32,11 @@ public class AiRequestService {
     private final AiRequestMapper aiRequestMapper;
     private final RestTemplate restTemplate;
 
-    // restTemplate 은 RestTemplateBuilder 인스턴스를 주입해야 되어서... @RequiredArgsConstructor 못씀
-    public AiRequestService(RestTemplateBuilder builder, AiRequestRepository aiRequestRepository,
-        AiRequestMapper aiRequestMapper, UserRepository userRepository) {
-        this.userRepository = userRepository;
-        this.restTemplate = builder.build();
-        this.aiRequestRepository = aiRequestRepository;
-        this.aiRequestMapper = aiRequestMapper;
-    }
+    @Value("${ai.api.url}")
+    private String apiUrl;
+
+    @Value("${ai.api.key}")
+    private String apiKey;
 
     /**
      * AI를 통한 상품 설명 자동생성
@@ -59,10 +56,10 @@ public class AiRequestService {
 
         // 응답 데이터 text 를 담아 Entiy 업데이트
         String responseContent = callAiApi(aiRequestDto);
-        AiRequest updateResponse = AiRequest.updateResponseContent(aiRequest, responseContent);
+        aiRequest.updateResponseContent(responseContent);
 
         // Entity를 DB에 저장
-        AiRequest savedRequest = aiRequestRepository.save(updateResponse);
+        AiRequest savedRequest = aiRequestRepository.save(aiRequest);
 
         // 저장한 요청, 응답 데이터를 dto로 변환해 response
         return aiRequestMapper.aiRequestToAiResponseDto(savedRequest);
@@ -73,12 +70,11 @@ public class AiRequestService {
      */
     public List<AiResponseDto> getAiRequest(String username) {
         List<AiRequest> aiResponseList = aiRequestRepository.findAllByUser_Username(username);
-        if (aiResponseList.isEmpty()) {
-            throw new GlobalException(ResultCase.AIREQUEST_NOT_FOUND);
-        }
+
+        // 응답이 없으면 빈 List 반환
         return aiResponseList.stream()
             .map(aiRequestMapper::aiRequestToAiResponseDto)
-            .collect(Collectors.toList()); // List<AiRequest>를 List<AiReponseDto>로 변경하는 로직
+            .toList(); // List<AiRequest>를 List<AiReponseDto>로 변경하는 로직
     }
 
     /**
@@ -87,8 +83,7 @@ public class AiRequestService {
     public String callAiApi(AiRequestDto aiRequestDto) throws JsonProcessingException {
 
         log.info("callAiApi 실행");
-        String url = "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=AIzaSyBxYMu3a8C3XOW_5hgaJz91UFZ0wtltDL0";
-
+        String url = apiUrl + "?key=" + apiKey;
         HttpHeaders headers = new HttpHeaders();
         headers.set("Content-Type", "application/json");
 
@@ -112,19 +107,13 @@ public class AiRequestService {
     public String extractTextFromResponse(String responseBody) throws JsonProcessingException {
         ObjectMapper objectMapper = new ObjectMapper();
 
-        JsonNode rootNode = objectMapper.readTree(responseBody);
-        JsonNode candidatesNode = rootNode.path("candidates");
-
-        if (candidatesNode.isArray() && !candidatesNode.isEmpty()) {
-            JsonNode contentNode = candidatesNode.get(0).path("content");
-            JsonNode partsNode = contentNode.path("parts");
-
-            if (partsNode.isArray() && !partsNode.isEmpty()) {
-                JsonNode partNode = partsNode.get(0);
-                String text = partNode.path("text").asText();
-                return text;
-            }
-        }
-        return null;
+        return objectMapper.readTree(responseBody)
+            .path("candidates")
+            .path(0)
+            .path("content")
+            .path("parts")
+            .path(0)
+            .path("text")
+            .asText("");
     }
 }
